scripts/local/manifests/nfs-server.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: nfs-server
spec:
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: k8s.gcr.io/volume-nfs:0.8
        ports:
        - name: nfs
          containerPort: 2049
        - name: mountd
          containerPort: 20048
        - name: rpcbind
          containerPort: 111
        securityContext:
          privileged: true
        volumeMounts:
        - name: storage
          mountPath: /exports
      volumes:
      - name: storage
        hostPath:
          path: /mnt/nfs
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: nfs-server
spec:
  clusterIP: ${nfs_cluster_ip}
  ports: 
    - name: nfs
      port: 2049
      targetPort: 2049
      nodePort: ${nfs_port}
    - name: mountd
      port: 20048
      targetPort: 20048
    - name: rpcbind
      port: 111
      targetPort: 111
  selector:
    app: nfs-server
  type: NodePort
