scripts/local/manifests/harbor.yml
# Ingress that points to harbor.harbor
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  namespace: harbor
spec:
  rules:
  - host: harbor.$domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor
            port:
              number: $harbor_port
