scripts/local/manifests/keycloak.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak-db
    spec:
      containers:
        - name: keycloak-db
          image: postgres:10.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: vol-keycloak-db
      volumes:
        - name: vol-keycloak-db
          persistentVolumeClaim:
            claimName: pvc-keycloak-db
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: keycloak
  namespace: keycloak
spec: 
  selector: 
    matchLabels: 
      app.kubernetes.io/name: keycloak
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template: 
    metadata: 
      labels: 
        app.kubernetes.io/name: keycloak
    spec: 
      containers: 
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.5
          args: 
            - start
          imagePullPolicy: Always
          ports: 
            - name: http
              containerPort: 8080                
            - name: https
              containerPort: 8443
          readinessProbe:
              httpGet:
                path: /realms/master
                port: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: keycloak-db
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak-db
spec:
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: keycloak-db
---
apiVersion: v1
kind: Service
metadata: 
  name: keycloak
  namespace: keycloak
  labels: 
    app.kubernetes.io/name: keycloak
spec:
  ports: 
    - port: 12080
      targetPort: 8080
  selector: 
    app.kubernetes.io/name: keycloak
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.deploy.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 12080
